add theme colors, update talwind

--- a/src/app/pages/buttons/buttons.component.html
+++ b/src/app/pages/buttons/buttons.component.html
@@ -41,7 +41,7 @@
 <!-- Botones con bordes -->
 <div class="relative flex w-full flex-col rounded-xl bg-white bg-clip-border text-gray-700 shadow-md my-4">
   <div class="p-6">
-    <h5 class="mb-2 block font-sans text-xl font-semibold leading-snug tracking-normal text-blue-gray-900 antialiased">
+    <h5 class="mb-2 hover:bg-danger block font-sans text-xl font-semibold leading-snug tracking-normal text-blue-gray-900 antialiased">
       Grupo de Botones con borde
     </h5>
     <p class="block font-sans text-base font-light leading-relaxed text-inherit antialiased">
