add toast notifications, fix profile user link in navbar, add tracking-wide to menu, fix page non found, add login and register component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <app-sidebar [isExpanded]="expandedSidebar"></app-sidebar>
 
     <main class="w-full flex-1 bg-gray-50 dark:bg-gray-900">
+        <ng-toast [position]="TOAST_POSITIONS.TOP_CENTER" [width]="350"></ng-toast>
         <!-- Header -->
         <app-navbar (expanded)="expandedSidebar = $event"></app-navbar>
           
