--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,6 +1,7 @@
-<section class="bg-gray-50 py-14 sm:py-12">
-    <div class="mx-auto max-w-2xl px-6 lg:max-w-7xl lg:px-8">
+<section class="bg-gray-50 py-5 sm:py-12">
+    <div class="">
       <router-outlet></router-outlet>
     </div>
 </section>
+  
   
