fix color tailwind: color mapper to fix issue in button screen

--- a/src/app/pages/buttons-group/buttons-group.component.html
+++ b/src/app/pages/buttons-group/buttons-group.component.html
@@ -12,7 +12,7 @@
     <div class="p-6 flex items-center justify-center">
         <div class="p-6 pt-0 flex flex-wrap">
             <div dGroup>
-                <button dButton appRipple color="primary"> Left </button>
+                <button dButton appRipple color="bg-primary"> Left </button>
                 <button dButton appRipple color="primary"> Middle </button>
                 <button dButton appRipple color="primary"> Right </button>
             </div>      
