--- a/src/app/pages/buttons/buttons.component.html
+++ b/src/app/pages/buttons/buttons.component.html
@@ -41,8 +41,8 @@
 <!-- Botones con bordes -->
 <div class="relative flex w-full flex-col rounded-xl bg-white bg-clip-border text-gray-700 shadow-md my-4">
   <div class="p-6">
-    <h5 class="mb-2 hover:bg-danger block font-sans text-xl font-semibold leading-snug tracking-normal text-blue-gray-900 antialiased">
-      Grupo de Botones con borde
+    <h5 class="mb-2 undary block font-sans text-xl font-semibold leading-snug tracking-normal text-blue-gray-900 antialiased">
+      Grupo de Botones con borde <strong class="hover:bg-success text-danger hover:bg-secondary"></strong>
     </h5>
     <p class="block font-sans text-base font-light leading-relaxed text-inherit antialiased">
       Grupo de botones con borde. Cada botón tiene el texto que indica el tipo de accion que realiza
@@ -233,15 +233,15 @@
   <div class="p-6 flex items-baseline gap-16">
       <h6 class="font-semibold ml-16">Grandes</h6>
       <div class="p-6 pt-0 flex flex-wrap gap-2">
-        <button dButton appRipple variety="large"> Primary </button>
-        <button dButton appRipple variety="large" color="secondary"> secondary </button>
+        <button dButton appRipple size="lg"> Primary </button>
+        <button dButton appRipple size="lg" color="secondary"> secondary </button>
       </div>
   </div>
   <div class="p-6 flex items-baseline gap-14">
       <h6 class="font-semibold ml-16">Pequeños</h6>
       <div class="p-6 pt-0 flex flex-wrap gap-2">
-        <button dButton appRipple variety="small"> Primary </button>
-        <button dButton appRipple variety="small" color="secondary"> secondary </button>
+        <button dButton appRipple size="sm"> Primary </button>
+        <button dButton appRipple size="sm" color="secondary"> secondary </button>
       </div>
   </div>
 </div>
