--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="isolate bg-gray-900 px-6 py-24 sm:py-32 lg:px-8">
   <div class="mx-auto max-w-2xl text-center">
-    <h2 class="text-4xl font-semibold tracking-tight text-balance text-white sm:text-5xl">Log UP</h2>
+    <h2 class="text-4xl font-semibold tracking-tight text-balance text-white sm:text-5xl">Registro</h2>
     <p class="mt-2 text-lg/8 text-gray-400">Aute magna irure deserunt veniam aliqua magna enim voluptate.</p>
   </div>
   <form ngNativeValidate [formGroup]="registerForm" (ngSubmit)="register()" class="mx-auto mt-16 max-w-xl sm:mt-20">
