--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
 
 @theme {
   --color-mint-500: oklch(0.72 0.11 178);
-  --color-orange: oklch(55.3% 0.195 38.402); // orange
+  --color-orange: oklch(55.3% 0.195 38.402);
   --color-primary: oklch(43.2% 0.232 292.759); // purple
   --color-secondary: oklch(25.7% 0.09 281.288); // dark
   --color-success: oklch(48.8% 0.243 264.376); // blue
