add breadcrumbs component to the view, fix aside color bar until the end, Fix buttons and buttons-group style

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,5 +1,5 @@
-<section class="bg-gray-50 py-5 sm:py-12">
-    <div class="">
+<section>
+    <div class="container">
       <router-outlet></router-outlet>
     </div>
 </section>
