--- a/src/app/pages/buttons/buttons.component.html
+++ b/src/app/pages/buttons/buttons.component.html
@@ -1,4 +1,4 @@
-<p class="mx-auto max-w-lg text-balance text-center text-4xl font-grap font-semibold tracking-tight text-gray-950 sm:text-5xl pb-2">Botones</p>
+<p class="mx-auto max-w-lg text-balance text-center text-4xl font-grap font-semibold tracking-tight text-white uppercase sm:text-5xl pb-2">Botones</p>
 <!-- Botones Primarios -->
 <div class="relative flex w-full flex-col rounded-xl bg-white bg-clip-border text-gray-700 shadow-md my-4">
     <div class="p-6">
