--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <div class="flex h-full">
-    <app-sidebar [isExpanded]="expandedSidebar"></app-sidebar>
-
+    <app-sidebar class="sidebar" [isExpanded]="expandedSidebar"></app-sidebar>
     <main class="w-full flex-1 bg-gray-50 dark:bg-gray-900">
         <ng-toast [position]="TOAST_POSITIONS.TOP_CENTER" [width]="350"></ng-toast>
         <!-- Header -->
         <app-navbar (expanded)="expandedSidebar = $event"></app-navbar>
-          
+        
+        <!-- Ruta actual -->
+        <app-breadcrumbs></app-breadcrumbs>
+
         <!-- Main Content -->
         <app-main></app-main>
     </main>
